about us header spacing fixed so it doesn't run under the header

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1143,7 +1143,7 @@ h2 {
 }
 
 #about-us {
-  padding: 3.2rem;
+  padding: 8.2rem 3.2rem 3.2rem;
   text-align: center;
 }
 
